<resources>
    <string name="app_name">Assignment02_SODV3202</string>
    <string name="StartGame">Button</string>
    <string name="start_game">Start Game</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="textview">TextView</string>
    <string name="game_Question">Which Celebrity is this?</string>
    <string name="todo">TODO</string>
    <string name="button_default">Button</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="settings_btnReset_text">Reset</string>
    <string name="settings_ThemeSwitch_text">Theme</string>
    <string name="about_the_game">About the Game</string>
    <string name="back_to_main_menu">Back to Main Menu</string>
    <string name="save_settings">Save</string>
    <string name="number_of_guesses">G#</string>
    <string name="dark_mode_theme">Dark Mode Theme</string>
    <string name="settings_GuessNum_Title">"Levels: "</string>
    <string name="game_btn_BackToMenu">Menu</string>
    <string name="settings_btnBack">Back</string>>
</resources>