<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/greenish"

    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnStartGame"
        android:layout_width="124dp"
        android:layout_height="50dp"
        android:layout_marginTop="240dp"
        android:background="@drawable/rounded_corners_btn"
        android:backgroundTint="@color/navish"
        android:onClick="startGame"
        android:shadowColor="@color/blackish"
        android:text="@string/start_game"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="@color/white" />

    <Button
        android:id="@+id/btnSettings"
        android:layout_width="125dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/rounded_corners_btn"
        android:backgroundTint="@color/navish"
        android:text="@string/settings"
        app:layout_constraintStart_toStartOf="@+id/btnStartGame"
        app:layout_constraintTop_toBottomOf="@+id/btnStartGame" />

    <Button
        android:id="@+id/btnAbout"
        android:layout_width="125dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/rounded_corners_btn"
        android:backgroundTint="@color/navish"
        android:onClick="aboutGame"
        android:text="@string/about"
        app:layout_constraintStart_toStartOf="@+id/btnSettings"
        app:layout_constraintTop_toBottomOf="@+id/btnSettings" />
</androidx.constraintlayout.widget.ConstraintLayout>